<resources>
    <string name="app_name">PinchTest</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight (lbs)</string>
    <string name="bodyfat">Body Fat %</string>
    <string name="bodydensity">Body Density</string>
    <string name="bmi">Body Mass Index</string>
    <string name="fatmass">Fat Mass</string>
    <string name="leanbodymass">Lean Body Mass</string>
    <string name="bicep">Bicep</string>
    <string name="tricep">Tricep</string>
    <string name="subscapular">Subscapular</string>
    <string name="suprailiac">Suprailiac</string>
    <string name="height">Height (in)</string>
    <string name="upperarm">Upper Arm</string>
    <string name="forearm">Fore Arm</string>
    <string name="neck">Neck</string>
    <string name="chest">Chest</string>
    <string name="waist">Waist</string>
    <string name="hips">Hips</string>
    <string name="thigh">Thigh</string>
    <string name="calf">Calf</string>
    <string name="email">Email</string>
    <string name="update_button">Update Body Fat</string>
    <string name="add_button">Add Body Fat</string>
    <string name="get_started">Get Current Stats</string>
    <string name="circum_button">Add Circumference Measurements</string>
    <string name="new_user_button">Input User Data</string>
    <string name="main">Back to Main</string>
    <string name="CLIENT_ID">57051147513-fnfoo9582m7rq2uef58kmtkn5ltm4pfu.apps.googleusercontent.com</string>
    <string name="API_KEY">AIzaSyCcF487gp7YyxioCyWMx0UNL5O4OIrteto</string>
    <string name="na">N/A</string>
    <string name="back_button">Back</string>
    <string name="delete_button">Delete Account</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout_button">Logout</string>
    <string name="update_user_button">Edit My Info</string>
    <string name="select">Select Measurement To Update From List</string>
</resources>
