<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:id="@+id/pinches_item">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">
        <TextView
            android:id="@+id/pinch_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        <TextView
            android:id="@+id/dates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textSize="12dp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/biceps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/bicep"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/triceps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_weight="1"
            android:text="@string/tricep"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/subscaps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/subscapular"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/suprailiacs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/suprailiac"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/bodyfats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/bodyfat"
            android:textAlignment="center"/>
    </LinearLayout>
</LinearLayout>